tests/ui/suggestions/use-parentheses-to-call-closure-issue-145404.rs
//@ run-rustfix

use std::fmt::Display;

struct S;

impl S {
    fn call(&self, _: impl Display) {}
}

fn main() {
    S.call(|| "hello"); //~ ERROR [E0277]
}
